# acrobot-dp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: acrobot.h  inverted_pendulum.h  robot_dp.h  simulator.h  state_grid.h
matlab/: read_sim_log.m  read_u_ab_log.m  read_u_log.m  visualize_ab_input.m  visualize_ab_tracking.m  visualize_ip_input_map.m  visualize_ip_tracking.m  wrap_0_to_2pi.m
src/: apply_acrobot_policy.cpp  apply_inverted_pendulum_policy.cpp  calculate_acrobot_policy.cpp  calculate_inverted_pendulum_policy.cpp  calculate_lollipop_policy.cpp  lollipop_dp.cpp  main.cpp
